Closed Bug 1643509 Opened 4 years ago Closed 4 years ago

Crash in [@ mozilla::dom::PContentParent::SendUpdateMediaControlKeysEvent]

Categories

(Core :: Widget: Gtk, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox76 --- unaffected
firefox77 --- unaffected
firefox78 --- disabled
firefox79 --- fixed

People

(Reporter: mccr8, Assigned: alwu)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-d56f29b0-5b89-4ae7-a779-a20130200531.

Top 10 frames of crashing thread:

0 libxul.so void mozilla::ipc::WriteIPDLParam<mozilla::dom::MediaControlKeysEvent const&> ipc/glue/IPDLParamTraits.h:62
1 libxul.so mozilla::dom::PContentParent::SendUpdateMediaControlKeysEvent ipc/ipdl/PContentParent.cpp:4656
2 libxul.so mozilla::dom::CanonicalBrowsingContext::UpdateMediaControlKeysEvent docshell/base/CanonicalBrowsingContext.cpp:362
3 libxul.so mozilla::dom::MediaController::UpdateMediaControlKeysEventToContentMediaIfNeeded dom/media/mediacontrol/MediaController.cpp:109
4 libxul.so mozilla::dom::MediaControlKeysHandler::OnKeyPressed dom/media/mediacontrol/MediaControlKeysEvent.cpp:42
5 libxul.so mozilla::dom::MediaControlKeysManager::OnKeyPressed dom/media/mediacontrol/MediaControlKeysManager.cpp:94
6 libxul.so mozilla::widget::MPRISServiceHandler::EmitEvent widget/gtk/MPRISServiceHandler.cpp:666
7 libxul.so mozilla::widget::HandleMethodCall widget/gtk/MPRISServiceHandler.cpp:82
8 libgio-2.0.so.0 g_dbus_connection_signal_unsubscribe 
9 libglib-2.0.so.0 g_main_context_dispatch 

The crash reason is MOZ_RELEASE_ASSERT(EnumValidator::IsLegalValue(aValue)). I see one crash on Nightly build 20200530211958, and a few more recent. Maybe this is related to bug 1640339?

Flags: needinfo?(alwu)

probably, but I will remove MediaControlKeysEvent in bug1640998, so this crash should be fixed after finishing that bug.

Flags: needinfo?(alwu)
See Also: → 1640998

Great. Keep in mind that this crash has already made it to 78, so whatever fix happens will need to land there.

Ah, wait, I've found the problem, it's a simple fix.

Assignee: nobody → alwu
Priority: -- → P2
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/020c2356f7c9
update `ParamTraits<mozilla::dom::MediaControlKeysEvent>` to sync with `MediaControlKeysEvent` r=mccr8
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

The patch landed in nightly and beta is affected.
:alwu, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(alwu)

Comment on attachment 9154397 [details]
Bug 1643509 - update ParamTraits<mozilla::dom::MediaControlKeysEvent> to sync with MediaControlKeysEvent

Beta/Release Uplift Approval Request

  • User impact if declined: Crash on Linux when user hits a certain media key
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This change adds the focus key into the IPC serialized type, which is a really minor change.
  • String changes made/needed:
Flags: needinfo?(alwu)
Attachment #9154397 - Flags: approval-mozilla-beta?

We don't seem to see crashes for this outside of nightly, is this maybe only happening with media.hardwaremediakeys.enabled?

Flags: needinfo?(alwu)

Yes, once you enable this pref and you can reproduce this crash on Linux when a user sends focus media key.

Flags: needinfo?(alwu)

OK, that doesn't seem worth worrying about then.

Attachment #9154397 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: