Bug 1643509 - update `ParamTraits<mozilla::dom::MediaControlKeysEvent>` to sync with `MediaControlKeysEvent` r=mccr8

The first value in `MediaControlKeysEvent` is `eFocus`, so we should also update its `ParamTraits`.

[1] https://searchfox.org/mozilla-central/rev/598e50d2c3cd81cd616654f16af811adceb08f9f/dom/media/mediacontrol/MediaControlKeysEvent.h#23

Differential Revision: https://phabricator.services.mozilla.com/D78410